# amazon-freertos-custom-v202106

./: CMakeLists.txt  Log.txt  Makefile  README.md  Testing_command.txt  partition-table.csv  sdkconfig
components/foo/: CMakeLists.txt
components/foo/include/: demoRunnerConfig.h
components/foo/src/: demoRunner.c  mqtt_pub_sub.c
freertos/: Testing_Command.txt  sdkconfig
freertos-configs/: aws_application_version.h  aws_demo_config.h  demoRunnerConfig.h  ota_demo_config.h
freertos/Log/: ota-test-23-7-2021.txt  ota-test-with-shadow-n-mqtt-23-7-2021.txt
freertos/demos/coreMQTT_Agent/: CMakeLists.txt
freertos/demos/include/: aws_clientcredential.h  aws_clientcredential_keys.h
freertos/demos/ota/ota_demo_core_mqtt/: ota_demo_core_mqtt.c
freertos/vendors/espressif/boards/esp32/aws_demos/config_files/: aws_demo_config.h  ecdsasigner.key
src/: main.c  mqtt_agent_task.c  mqtt_pub_sub.c  ota_over_mqtt_task.c  shadow_task.c
src/include/: CMakeLists.txt  demoRunner.h
